# smiscc

./: .gitignore  2  Cargo.toml  backup.s  build.rs  cleaned.s  hello  immediate.s  link.sh  old.s  optimised.s  print.s  production.sh  simple_sample_code.txt  test  test.s  test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  todo.md
src/: config.rs  main.rs
src/compiler/: OPTIMIZATIONS.md  compiler.rs  compiler_coordinator.rs  context.rs  data_types.rs  line_map.rs  mod.rs  object.rs  optimization.rs  splitter.rs  token.rs  tokenization_tests.rs  tokenizer.rs  trimmer.rs
src/compiler/backend/: assembly.rs  context.rs  flattener.rs  mod.rs
src/compiler/backend/arch/: aarch64.rs  aarch64_macOS.rs  aarch64_macOS_header_bp.s  aarch64_mac_os.rs  aarch64_opt.rs  isa.rs  mod.rs  register.rs  smiscc_none.rs
src/compiler/data_types/: boolean.rs  data_types.rs  datatypes_general.rs  integer.rs  mod.rs  object.rs
src/compiler/parser/: function_meta.rs  future.rs  mod.rs  modifier.rs  parse.rs  parse_arg_array.rs  parse_arithmetic_expression.rs  parse_datatype.rs  parse_expression_kind.rs  parse_line.rs  parse_token.rs  parser_meta.rs  statement.rs  statements.rs
src/compiler/parser/default/: mod.rs
src/compiler/tokenization/: mod.rs  token.rs  token_prototype.rs  tokenization_tests.rs  tokenizer.rs
src/help/: help.md  help.rs  help_impl.rs  mod.rs
src/help/commands/: ol.md  optimizations.md  show-tokens.md
src/util/: exit.rs  instruments.rs  math.rs  mod.rs  operator.rs  signpost.c
tests/: bools.txt  exit.txt  functions.txt  test.txt  test3.txt  test9.txt  test_func.txt
(+5 files in other folders)
