[package]
name = "smiscc"
version = "0.1.0"
edition = "2024"

[build-dependencies]
cc = "1.0"

[dependencies]
anyhow = "1.0.100"
cc = "1.2.51"
clap = { version = "4.5.47", features = ["derive"] }
colorize = "0.1.0"
derive-new = "0.7.0"
downcast-rs = "2.0.2"
env_logger = "0.11.8"
glob = "0.3.3"
include_dir = "0.7.4"
log = "0.4.29"
logos = "0.16.1"
oslog = "0.2.0"
serde = { version = "1.0.228", features = ["default", "std", "derive", "serde_derive"] }
serde_json = "1.0.149"
signpost = "0.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
termimad = "0.34.0"
uuid = { version = "1.18.1", features = [ "v4" ] }
